--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: black;
-  background-color: #163E64;
+  --color-background: #163E64;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,12 +13,32 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Box model reset */
+*, *::before, *::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+h1,h2 {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
 .container {
   background-color: #f8f9fa;
   border-radius: 15px;
+
   padding: 20px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  margin: 20px auto; /* 10px 0.625rem*/
+
+  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;  /* Alineación centrada de los elementos */
+  gap: 15px;  /*Separación entre los recuadros */
 }
 
 
@@ -37,6 +57,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--color-background);
 }
 
 h1 {
