--- a/src/components/specificCSS/AcademicEntry.css
+++ b/src/components/specificCSS/AcademicEntry.css
@@ -1,33 +1,30 @@
-/* AcademicEntry.css */
+:root {
+    --card-bg-color: #F2F2F2;
+    --text-secondary-color: #6c757d;
+}
 
 .card.custom-card {
-    max-width: 500px;
+    max-width: 480px;
     margin: 0 auto;
     padding: 0;
-    background-color: #F2F2F2;
+    background-color: var(--card-bg-color);
 }
 
-.card.custom-card .row.g-0 .col-md-4 {
-    padding: 0;
-}
-
-.card.custom-card .row.g-0 .col-md-4 .img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
+.card.custom-card .row.g-0 .col-md-4,
 .card.custom-card .row.g-0 .col-md-8 {
     padding: 0;
+}
+
+.card.custom-card .img-fluid {
+    max-width: 100%;
+    height: auto;
 }
 
 .card.custom-card .card-body {
     padding: 1rem;
 }
 
-.card.custom-card .card-title {
-    margin-bottom: 0.5rem;
-}
-
+.card.custom-card .card-title,
 .card.custom-card .card-text {
     margin-bottom: 0.5rem;
 }
@@ -37,5 +34,5 @@
 }
 
 .card.custom-card .text-body-secondary {
-    color: #6c757d; /* Cambia esto si necesitas otro color */
+    color: var(--text-secondary-color);
 }
